# clld-markdown-plugin

./: .bumpversion.cfg  README.md  RELEASING.md  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
src/clld_markdown_plugin/: __init__.py
tests/: conftest.py  test_unit.py
