[metadata]
author = Robert Forkel, Florian Matter
author_email = forkel@shh.mpg.de, florianmatter@gmail.com
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = Render CLDF markdown in clld apps.
long_description = file: README.md
long_description_content_type = text/markdown
name = clld_markdown_plugin
project_urls =
    Bug Tracker = https://github.com/clld/clld-markdown-plugin/issues
url = https://github.com/clld/clld-markdown-plugin
version = 0.0.1.dev

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir =
    =src
install_requires = 

[options.extras_require]
dev =
    bump2version
    coverage [toml]
    prospector[with_pyroma]
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
    tox
    myst_parser
    flake8
publishing =
    twine
    wheel

[options.packages.find]
include = clld_markdown_plugin, clld_markdown_plugin.*
where = src

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = clld_markdown_plugin
src_paths = clld_markdown_plugin,tests
line_length = 120

[flake8]
max-line-length = 88
extend-ignore = E203

[tool:pytest]
addopts = --cov
testpaths = tests

[coverage:run]
source =
    clld_markdown_plugin

[coverage:report]
show_missing = true